--- a/index.html
+++ b/index.html
@@ -2,57 +2,56 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-<title>Foundation by Free Css Templates</title>
+<title>Ponclure</title>
 <meta name="keywords" content="" />
 <meta name="description" content="" />
 <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
 <div id="header">
-	<h1><a href="#">Foundation</a></h1>
-	<h2><a href="http://www.freecsstemplates.org/">By Free CSS Templates</a></h2>
+	<h1><a href="#">Ponclure</a></h1>
+	<h2><a href="https://github.com/Ponclure"></a></h2>
 </div>
 <div id="left">
 	<div id="menu" class="boxed">
-		<h2 class="heading">Pages</h2>
+		<h2 class="heading">Our Github Projects</h2>
 		<ul>
-			<li class="first"><a href="#" title="">About Us</a></li>
-			<li><a href="#" title="">Products</a></li>
-			<li><a href="#" title="">Services</a></li>
-			<li><a href="#" title="">Clients</a></li>
-			<li><a href="#" title="">Support</a></li>
+			<li class="first"><a href="https://github.com/Ponclure/Minecraft-Among-Us" title="">Among Us Plugin</a></li>
+			<li><a href="https://github.com/Ponclure/Among-Us-Worlds" title="">Among Us Worlds</a></li>
+			<li><a href="https://github.com/Ponclure/Among-Us-Resourcepacks" title="">Among Us Resourcepack</a></li>
+			<li><a href="https://github.com/Ponclure/SecurityCams" title="">SecurityAPI</a></li>
+			<li><a href="#" title="">More Coming Soon!</a></li>
 		</ul>
 	</div>
 </div>
 <!-- end #left -->
 <div id="right">
 	<div class="boxed">
-		<h2 class="heading">Lorem Ipsum Dolor </h2>
+		<h2 class="heading">Latest News</h2>
 		<ul>
-			<li>In posuere eleifend odio quisque semper augue mattis wisi. <a href="#">Maecenas ligula&#8230;</a></li>
-			<li>Donec leo, vivamus fermentum nibh in augue praesent a lacus at. <a href="#">Urna congue rutrum&#8230;</a></li>
-			<li>Quisque dictum integer nisl risus, sagittis convallis, rutrum id. <a href="#">Congue and nibh&#8230;</a></li>
+			<li>Among Us is currently in development. Tune in another time once we release our alpha build!</li>
 		</ul>
 	</div>
 </div>
 <!-- end #right -->
 <div id="center">
 	<div class="boxed">
-		<h1 class="heading">Welcome to Foundation!</h1>
-		<p><strong>Foundation</strong> is a free template from <a href="http://www.freecsstemplates.org/">Free CSS Templates</a> released under a <a href="http://creativecommons.org/licenses/by/2.5/">Creative Commons Attribution 2.5 License</a>. The photo is from <a href="http://www.pdphoto.org/">PDPhoto.org</a>. You're free to use it for both commercial or personal use. I only ask that you link back to my site in some way. <em>Enjoy :)</em></p>
-		<p>An unordered list example:</p>
+		<h1 class="heading">Welcome to Ponclure!</h1>
+		<p><strong>Ponclure</strong> is a small organization from the developers PulseBeat_02, Conclure, Fefo, and MalekiRe who like creating plugins from the Spigot API, mods from the Fabric/Forge API, and also resourcepacks/worlds that are used for our projects. </p>
+        <p><strong>Our Github Profiles</strong></p>
 		<ul>
-			<li>List item number one</li>
-			<li>List item number two</li>
-			<li>List item number three </li>
+			<li><a href="https://github.com/PulseBeat02" title="">PulseBeat_02</a></li>
+			<li><a href="https://github.com/Conclure" title="">Conclure</a></li>
+			<li><a href="https://github.com/Fefo6644" title="">Fefo</a></li>
+            <li><a href="https://github.com/MalekiRe" title="">MalekiRe</a></li>
 		</ul>
 	</div>
 </div>
 <!-- end #center -->
 <div style="clear: both;">&nbsp;</div>
 <div id="footer">
-	<p id="legal">Copyright &copy; 2007 Foundation. All Rights Reserved. Designed by <a href="http://www.freecsstemplates.org/">Free CSS Templates</a>.</p>
+	<p id="legal">Copyright &copy; 2020 Ponclure. All Rights Reserved. Designed by PulseBeat_02.</p>
 	<p id="links"><a href="#">Privacy Policy</a> | <a href="#">Terms of Use</a></p>
 </div>
-<div align=center>This template  downloaded form <a href='http://all-free-download.com/free-website-templates/'>free website templates</a></div></body>
+</body>
 </html>
