--- a/index.html
+++ b/index.html
@@ -17,9 +17,11 @@
 		<h2 class="heading">Our Github Projects</h2>
 		<ul>
 			<li class="first"><a href="https://github.com/Ponclure/Minecraft-Among-Us" title="">Among Us Plugin</a></li>
+            <li><a href="https://github.com/Ponclure/Simple-NPC-Framework" title="">Simple NPC Framework</a></li>
+            <li><a href="https://github.com/Ponclure/SecurityCams" title="">Security Camera API</a></li>
 			<li><a href="https://github.com/Ponclure/Among-Us-Worlds" title="">Among Us Worlds</a></li>
 			<li><a href="https://github.com/Ponclure/Among-Us-Resourcepacks" title="">Among Us Resourcepack</a></li>
-			<li><a href="https://github.com/Ponclure/SecurityCams" title="">SecurityAPI</a></li>
+			
 			<li><a href="#" title="">More Coming Soon!</a></li>
 		</ul>
 	</div>
